--- a/style.css
+++ b/style.css
@@ -135,13 +135,6 @@ nav{
     color: white;
 }
 
-.signup:focus{
-    outline: none;
-    border: none;
-    background-color: black;
-    color: white;
-}
-
 header a{
     color: black;
     text-decoration: none;
@@ -241,6 +234,8 @@ main{
     border-radius: 50%;
 }
 
+/* Calendar */
+
 .content{
     background-color: #0090AA;
     height: 700px;
@@ -335,6 +330,8 @@ main{
     margin-bottom: 10px;
 }
 
+/* Tour Destination */
+
 .tour{
     background-color: #0090BA;
     height: 1500px;
@@ -363,9 +360,8 @@ main{
 }
 
 .image img{
-    width: 50%;
+    width: 75%;
     border-radius: 10px;
-    filter: blur(1px);
     box-shadow: 0px 5px 10px 5px black;
     cursor: pointer;
     transition: all .3s ease;
@@ -386,8 +382,69 @@ main{
     color: black;
 }
 
+/* About Us */
+
+.about-us{
+    height: 500px;
+    background-color: lightblue;
+}
+
+.about-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.about-container .fa-solid{
+    font-size: 50px;
+    width: 100%;
+    text-align: center;
+    height: 100%;
+}
+
+.award .fa-solid{
+    margin-top: 25px;
+}
+
+.award p{
+    margin: 50px auto;
+    width: 75%;
+    text-align: center;
+}
+
+/* Location */
+
+.location{
+    height: 750px;
+    background-color: #00b894;
+}
+
+.maps{
+    text-align: center;
+    width: 100%;
+}
+
+.maps img{
+    width: 500px;
+    border-radius: 15px;
+    position: relative;
+    animation: bounce 2s ease infinite;
+}
+
+.maps a{
+    text-decoration: none;
+}
+
+.location i{
+    display: block;
+    text-align: center;
+    margin: 50px 0 10px 0;
+}
+
+/* Send Us a Message */
+
 .contact{
-    height: 695px;
+    height: 725px;
 }
 
 .contact-wrapper{
@@ -402,8 +459,29 @@ main{
 
 .contact-form input{
     margin-bottom: 45px;
-    padding: 2px 0;
+    padding: 10px 85px;
+    outline: none;
+    border: none;
+    background-color: lightgrey;
+    text-align: center;
+    border-radius: 5px;
+}
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
+textarea{
+    outline: none;
+    border: none;
+    background-color: lightgrey;
+    border-radius: 5px;
+    padding: 15px;
+    box-sizing: border-box;
 }
 
 .contact-img{
@@ -426,6 +504,8 @@ main{
     top: 10px;
     box-shadow: none;
 }
+
+/* Footer */
 
 footer{
     height: 200px;
@@ -469,7 +549,41 @@ footer{
 
 /* Mobile */
 
-@media(max-width: 768px){
+@media(max-width: 320px){
+
+    .hamburger{
+        right: 20px;
+    }
+
+    .left .title{
+        font-size: 15px;
+    }
+    .title h1 {
+        font-size: 18px;
+        
+    }
+
+    .title h1 span{
+        font-size: 20px;
+    }
+
+    .title p{
+        width: 100%;
+    }
+
+    .footer-left{
+        font-size: 10px;
+    }
+}
+
+@media(max-width: 375px){
+
+    .hamburger{
+        right: 30px;
+    }
+}
+
+@media(max-width: 425px){
     .header-list{
         position: fixed;
         left: -100%;
@@ -552,6 +666,11 @@ footer{
         background-color: white;
     }
 
+    .left .title{
+        color: white;
+        text-align: center;
+    }
+
     .right{
         display: none;
     }
@@ -602,6 +721,22 @@ footer{
         height: 2600px;
     }
 
+    .about-us{
+        height: 1050px;
+    }
+
+    .about-container{
+        flex-direction: column;
+    }
+
+    .location{
+        height: 600px;
+    }
+
+    .maps img{
+        width: 90%;
+    }
+
     .contact-img{
         display: none;
     }
@@ -610,15 +745,241 @@ footer{
         width: 200%;
     }
 
-    #submit
-    {
+    .contact-form{
+        text-align: center;
         width: 100%;
     }
+
+
+    input{
+        width: 250px;
+    }
+
+    #submit
+    {
+        width: 250px;
+        border: 2px solid;
+        text-align: center;
+    }
     textarea{
-        width: 385px;
+        width: 250px;
     }
 
     footer{
         font-size: 12px;
     }
 }  
+
+/* Tablet */
+
+@media(max-width: 768px){
+    .header-list{
+        position: fixed;
+        left: -100%;
+        top: 0px;
+        gap: 0;
+        flex-direction: column;
+        background-color: rgba(129, 236, 236,1.0);
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: .3s;
+        z-index: 1000000000;
+    }
+
+    .signup-nav,
+    .login-nav{
+        display: none;
+    }
+    
+    .header-list span{
+        display: inline-block;
+        margin: 20px 0;
+        outline: none;
+    }
+
+    .signup,
+    .login{
+        outline: none;
+        background-color: transparent;
+        font-size: 20px;
+    }
+    .signup:focus{
+        background-color: transparent;
+        outline: none;
+        color: black;
+    }
+
+    .signup:hover{
+        color: black;
+        background-color: transparent;
+    }
+
+    .login::after{
+        width: 0%;
+        height: 0%;
+    }
+
+    .header-list li a{
+        opacity: 1;
+    }
+
+    .header-list li:nth-child(1){
+        margin-top: 120px;
+    }
+
+    .header-list li{
+        width: 100%;
+        text-align: center;
+        margin: 30px 0;
+        font-size: 30px;
+    }
+
+    .header-list.active{
+        left: 0;
+        top: 0;
+    }
+
+    .hamburger{
+        display: block;
+        margin-left: 325px;
+        z-index: 1000000000000000000;
+        position: fixed;
+        right: 50px;
+    }
+
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .btn a{
+        background-color: white;
+    }
+
+    .left .title{
+        color: white;
+        text-align: center;
+    }
+
+    .right{
+        display: none;
+    }
+
+    .content{
+        height: 1350px;
+    }
+
+    .cards{
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: -300px;
+    }
+
+    .card{
+        width: 100%;
+        margin-bottom: -10px;
+    }
+
+    .card:nth-child(4){
+        margin-bottom: -250px;
+    }
+
+    .image{
+        width: 100%;
+    }
+
+    .image img{
+        filter: blur(0px);
+        position: relative;
+        width: 75%;
+        animation: bounce 2s ease infinite;
+    }
+    @keyframes bounce {
+        0%{
+            top: 0px;
+        }
+        50%{
+            top: 10px;
+        }
+        100%{
+            top: 0px;
+        }
+    }
+
+    .tour{
+        height: 2600px;
+    }
+
+    .about-us{
+        height: 1050px;
+    }
+
+    .about-container{
+        flex-direction: column;
+    }
+
+    .location{
+        height: 800px;
+    }
+
+    .maps img{
+        width: 90%;
+    }
+
+    .contact-img{
+        display: none;
+    }
+
+    .contact-img img{
+        width: 200%;
+    }
+
+    .contact-form{
+        text-align: center;
+        width: 100%;
+    }
+
+    input{
+        width: 250px;
+    }
+
+    #submit
+    {
+        width: 250px;
+        border: 2px solid;
+        text-align: center;
+    }
+    textarea{
+        width: 250px;
+    }
+
+    footer{
+        font-size: 12px;
+    }
+}
+
+/* 1024 Laptop */
+
+@media(max-width: 1024px) {
+    .login{
+        margin-right: 30px;
+    }
+
+    .signup{
+        width: 100px;
+        text-align: center;
+    }
+
+    .card{
+        width: 100%;
+    }
+}
